SSC-XX footer, fix spacing on small viewport

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/general.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/general.less
@@ -318,13 +318,15 @@ picture {
     &--award {
         padding: 0;
 
-        [class*='col-'] {
-            &:first-child {
-                padding-right: 0;
-            }
+        @media screen and (min-width: @screen-sm) {
+            [class*='col-'] {
+                &:first-child {
+                    padding-right: 0;
+                }
 
-            &:nth-child(2) {
-                padding-left: 0;
+                &:nth-child(2) {
+                    padding-left: 0;
+                }
             }
         }
     }
